2009-02-04  Paul Goins  <general@vultaire.net>

	* gtypist.c: (display_speed): Fixed long-standing bug where gtypist
	  would display that an error rate of =< 3.0% is needed, but the
	  displayed error rate would sometimes be 3.0% due to rounding.  (Now
	  we use floor() to always round down and avoid this.)
	  (Error reported by Ali Gundaz)

2008-05-17  Paul Goins  <general@vultaire.net>

	* gtypist.c (display_speed): Changed maximum speed to 9999.99.  CPM
	  mode could go into 4 digits for really, really fast typists.

2008-05-12  Paul Goins  <general@vultaire.net>

	* cursmenu.c, gtypist.c, script.h: Updated copyright notices.
	* gtypist.c: Bug fix: --banner-colour, the alternate option for
	  --banner-colours, changed to --banner-colors.

2008-05-07  Paul Goins  <general@vultaire.net>

	* gtypist.c: Bug fix: added "break;" for "--scoring" case

2008-05-06  Paul Goins  <general@vultaire.net>

	* gtypist.c: Added switch for "characters-per-minute" mode.  This
	  is pretty much cosmetic since "words" are standardized to 5
	  characters, but some countries tend to use CPM instead of WPM.
	  However, speeds will top out at 999.99 CPM (200 WPM).