@@ -2,5 +2,5 @@
 
 # Central version definition.
 
-VERSION=2.8.2
+VERSION=2.8.3
 echo -n $VERSION
